--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
+    "cropperjs": "^1.6.2",
     "naive-ui": "^2.43.2",
     "pinia": "^2.2.4",
     "vue": "^3.5.10",
