chore: 更新.gitignore以排除虚拟环境目录
- 添加对.venv/和.venv-linux/目录的排除，以避免将虚拟环境文件纳入版本控制
- 保留其他环境目录的排除规则，确保项目结构清晰

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ MANIFEST
 # Virtual Environments
 # ==========================================
 .env
-.venv
+.venv/
+.venv-linux/
 env/
 venv/
 ENV/
