feat: 新增博客模块并完善项目结构
- 添加博客模型、仓库和API端点
- 在数据库初始化中注册博客模型
- 前端添加博客相关路由和本地化配置
- 引入marked库用于Markdown渲染
- 移除敏感文件password.txt并添加到.gitignore
- 为密码文件添加格式注释
- 完善API文档字符串

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,8 @@ logs/
 
 # TypeScript
 *.tsbuildinfo
+
+# ==========================================
+# Security
+# ==========================================
+password.txt
