refactor(frontend): 重构国际化与主题配置结构
- 将国际化文件从 `locales/` 移动到 `locales/manifests/` 目录，并更新导入路径
- 将主题配置从 `styles/theme.ts` 重构为 `themes/` 目录下的动态模块导入
- 删除旧的 `locales/.index.ts` 和 `styles/root.css` 文件
- 更新 `tsconfig.json` 以移除旧路径并添加 `vite/client` 类型
- 在 `app.vue` 中应用新的主题覆盖配置
- 添加详细的后端 API 文档

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,12 +14,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "types": ["vite/client"]
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.vue",
-    "env.d.ts",
-    "src/locales/.index.ts"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.vue"]
 }
