--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^5.0.0",
+    "@vitejs/plugin-vue-jsx": "^5.1.4",
     "typescript": "^5.3.3",
     "vite": "^6.4.1"
   }
