--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,12 @@
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "@popperjs/core": "^2.11.8",
     "@types/dompurify": "^3.0.5",
+    "@types/katex": "^0.16.8",
     "bootstrap": "^5.3.8",
     "cropperjs": "^1.6.2",
     "dompurify": "^3.3.1",
+    "highlight.js": "^11.11.1",
+    "katex": "^0.16.28",
     "marked": "^17.0.1",
     "naive-ui": "^2.43.2",
     "pinia": "^2.2.4",
