--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,8 @@ logs/
 # Security
 # ==========================================
 password.txt
+
+# ==========================================
+# Flag Files
+# ==========================================
+*.seeded
