--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "highlight.js": "^11.11.1",
     "katex": "^0.16.28",
     "marked": "^17.0.1",
+    "marked-katex-extension": "^5.1.6",
     "naive-ui": "^2.43.2",
     "pinia": "^2.2.4",
     "vue": "^3.5.10",
