--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "katex": "^0.16.28",
     "marked": "^17.0.1",
     "marked-katex-extension": "^5.1.6",
+    "mermaid": "^11.12.2",
     "naive-ui": "^2.43.2",
     "pinia": "^2.2.4",
     "vue": "^3.5.10",
