chore: 更新.gitignore以忽略前端静态目录
添加 frontend/static/ 和 static/ 目录到忽略列表，避免将构建生成的静态资源提交到版本库

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,8 @@ frontend/dist/
 dist/
 dist-ssr/
 *.local
+frontend/static/
+static/
 
 # ==========================================
 # IDEs / Editors
