--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - SEED=${SEED:-true}
       - TZ=Asia/Shanghai
     # 如果你在国内，可能需要配置 pip 源，可以在 Dockerfile 中配置，也可以在这里通过环境变量
-    # 比如: PIP_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
+      - PIP_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
 
   # 只有在你不想用 1Panel 托管前端静态文件时才需要这个服务
   # 推荐使用 1Panel 的 "静态网站" 功能，这里仅作参考
