feat(editor): 添加日语语言支持到 Markdown 编辑器
添加 @vavt/cm-extension 依赖以扩展 md-editor-v3 的语言包。
为日语（jp）语言环境配置编辑器，当用户界面语言切换为日语时，编辑器将显示对应的日语翻译。

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@popperjs/core": "^2.11.8",
     "@types/dompurify": "^3.0.5",
     "@types/katex": "^0.16.8",
+    "@vavt/cm-extension": "^1.11.2",
     "bootstrap": "^5.3.8",
     "cropperjs": "^1.6.2",
     "dompurify": "^3.3.1",
