--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "katex": "^0.16.28",
     "marked": "^17.0.1",
     "marked-katex-extension": "^5.1.6",
+    "md-editor-v3": "^6.3.1",
     "mermaid": "^11.12.2",
     "naive-ui": "^2.43.2",
     "pinia": "^2.2.4",
